# discord-vc-client

./: Cargo.toml  flake.nix
src/: login.rs  main.rs
src/discord/: guilds.rs  login.rs  mod.rs
